--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbUp4OV9HRTBrTjRueUN5eFBEcTVBSEJUMnFqUXxBQ3Jtc0tuWjY2ZTU2WUJVVG9IN2hyaW9jRW1UbkNCTk5LLTlTejdCYUE2M2hZOTRPVlhyYlhXeXBTbm5kOGwxX3RlNG0wSjlZd0xWdllRVVlWLURaQ0haQ05DbzFRTWlGRnI0OUpKMWU0ZG5DSzgwOUc1T0w0OA&q=https%3A%2F%2Fv.ht%2F7tRnm&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbWxxbmwzOW41dlB5VllKYzNLRDNpa2R1WHhXd3xBQ3Jtc0trM2EwQ2hQczZKMkFZTjIyNjRNd3FVZ2M4dTI5MHlrZHd0QkZQOUpnb0RoUHdVVnZkd1lVT1RBUEU2RzZmVTBmOS1LYy13VGdUU2NKVnVianRYZlFtMEcybUtSdDRfaVlReThIcGdUdEt4bkMtRnRCYw&q=https%3A%2F%2Fv.ht%2FuKU8j&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
